Grammar.output
State 18 conflicts: 4 shift/reduce


Grammar

    0 $accept: compileUnit $end

    1 compileUnit: statements

    2 statements: statement
    3           | statements statement

    4 statement: expression ';'
    5          | ';'

    6 expression: NUMBER
    7           | IDENTIFIER
    8           | IDENTIFIER '=' expression
    9           | expression '+' expression
   10           | expression '-' expression
   11           | expression '*' expression
   12           | expression '/' expression
   13           | '(' expression ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13
')' (41) 13
'*' (42) 11
'+' (43) 9
'-' (45) 10
'/' (47) 12
';' (59) 4 5
'=' (61) 8
error (256)
NUMBER (258) 6
IDENTIFIER (259) 7 8


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
compileUnit (14)
    on left: 1, on right: 0
statements (15)
    on left: 2 3, on right: 1 3
statement (16)
    on left: 4 5, on right: 2 3
expression (17)
    on left: 6 7 8 9 10 11 12 13, on right: 4 8 9 10 11 12 13


State 0

    0 $accept: . compileUnit $end

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    ';'         shift, and go to state 3
    '('         shift, and go to state 4

    compileUnit  go to state 5
    statements   go to state 6
    statement    go to state 7
    expression   go to state 8


State 1

    6 expression: NUMBER .

    $default  reduce using rule 6 (expression)


State 2

    7 expression: IDENTIFIER .
    8           | IDENTIFIER . '=' expression

    '='  shift, and go to state 9

    $default  reduce using rule 7 (expression)


State 3

    5 statement: ';' .

    $default  reduce using rule 5 (statement)


State 4

   13 expression: '(' . expression ')'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 10


State 5

    0 $accept: compileUnit . $end

    $end  shift, and go to state 11


State 6

    1 compileUnit: statements .
    3 statements: statements . statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    ';'         shift, and go to state 3
    '('         shift, and go to state 4

    $default  reduce using rule 1 (compileUnit)

    statement   go to state 12
    expression  go to state 8


State 7

    2 statements: statement .

    $default  reduce using rule 2 (statements)


State 8

    4 statement: expression . ';'
    9 expression: expression . '+' expression
   10           | expression . '-' expression
   11           | expression . '*' expression
   12           | expression . '/' expression

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16
    ';'  shift, and go to state 17


State 9

    8 expression: IDENTIFIER '=' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 18


State 10

    9 expression: expression . '+' expression
   10           | expression . '-' expression
   11           | expression . '*' expression
   12           | expression . '/' expression
   13           | '(' expression . ')'

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16
    ')'  shift, and go to state 19


State 11

    0 $accept: compileUnit $end .

    $default  accept


State 12

    3 statements: statements statement .

    $default  reduce using rule 3 (statements)


State 13

    9 expression: expression '+' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 20


State 14

   10 expression: expression '-' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 21


State 15

   11 expression: expression '*' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 22


State 16

   12 expression: expression '/' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 23


State 17

    4 statement: expression ';' .

    $default  reduce using rule 4 (statement)


State 18

    8 expression: IDENTIFIER '=' expression .
    9           | expression . '+' expression
   10           | expression . '-' expression
   11           | expression . '*' expression
   12           | expression . '/' expression

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    '+'       [reduce using rule 8 (expression)]
    '-'       [reduce using rule 8 (expression)]
    '*'       [reduce using rule 8 (expression)]
    '/'       [reduce using rule 8 (expression)]
    $default  reduce using rule 8 (expression)


State 19

   13 expression: '(' expression ')' .

    $default  reduce using rule 13 (expression)


State 20

    9 expression: expression . '+' expression
    9           | expression '+' expression .
   10           | expression . '-' expression
   11           | expression . '*' expression
   12           | expression . '/' expression

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 9 (expression)


State 21

    9 expression: expression . '+' expression
   10           | expression . '-' expression
   10           | expression '-' expression .
   11           | expression . '*' expression
   12           | expression . '/' expression

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 10 (expression)


State 22

    9 expression: expression . '+' expression
   10           | expression . '-' expression
   11           | expression . '*' expression
   11           | expression '*' expression .
   12           | expression . '/' expression

    $default  reduce using rule 11 (expression)


State 23

    9 expression: expression . '+' expression
   10           | expression . '-' expression
   11           | expression . '*' expression
   12           | expression . '/' expression
   12           | expression '/' expression .

    $default  reduce using rule 12 (expression)
